--- a/index.html
+++ b/index.html
@@ -380,47 +380,47 @@ body {
       <div class="buttons">
         <i class="fa fa-chevron-left nav-arrow left" onclick="prevButton()"></i>
         <button class="button" onclick="toggleForm('form1')">
-          <img src="https://i.imgur.com/lDszu4v.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/ZKap2R6.png" alt="Ícone" class="icon" />
           ENTRADA DE MEMBROS
         </button>
         <button class="button" onclick="toggleForm('form2')">
-          <img src="https://i.imgur.com/wUuGzSd.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/EnWTW31.png" alt="Ícone" class="icon" />
           EXPULSÃO
         </button>
         <button class="button" onclick="toggleForm('form3')">
-          <img src="https://i.imgur.com/7z0S0AN.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/vUn4p9M.png" alt="Ícone" class="icon" />
           LICENÇA
         </button>
         <button class="button" onclick="toggleForm('form4')">
-          <img src="https://i.imgur.com/yteQ6JX.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/VBG7iMT.png" alt="Ícone" class="icon" />
           PROMOÇÃO
         </button>
         <button class="button" onclick="toggleForm('form5')">
-          <img src="https://i.imgur.com/TJDDMm3.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/IAG6cru.png" alt="Ícone" class="icon" />
           REBAIXAMENTO
         </button>
         <button class="button" onclick="toggleForm('form6')">
-          <img src="https://i.imgur.com/rTP6CQK.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/zKbZh1m.png" alt="Ícone" class="icon" />
           SAÍDA
         </button>
         <button class="button" onclick="toggleForm('form7')">
-          <img src="https://i.imgur.com/ffZO6s0.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/HiCxY5P.png" alt="Ícone" class="icon" />
           PROLONGAMENTO DE LICENÇA
         </button>
         <button class="button" onclick="toggleForm('form8')">
-          <img src="https://i.imgur.com/sr9btur.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/0ncjPPy.png" alt="Ícone" class="icon" />
           RETORNO DE LICENÇA
         </button>
         <button class="button" onclick="toggleForm('form9')">
-          <img src="https://i.imgur.com/Z5fxRu2.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/md7A8oZ.png" alt="Ícone" class="icon" />
           MIGRAÇÃO DE CORPO
         </button>
         <button class="button" onclick="toggleForm('form10')">
-          <img src="https://i.imgur.com/tUhaMkI.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/xi0zMhG.png" alt="Ícone" class="icon" />
           TRANSFERÊNCIA DE CONTA
         </button>
         <button class="button" onclick="toggleForm('form11')">
-          <img src="https://i.imgur.com/ENa2MsJ.png" alt="Ícone" class="icon" />
+          <img src="https://i.imgur.com/ueZCCxA.png" alt="Ícone" class="icon" />
           REINTEGRAÇÃO
         </button>
         <button class="button" onclick="toggleForm('form13')">
